[package]
name = "compile_break"
version = "0.1.0"
authors = ["Elrendio <oscar.walter@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
protobuf = "2.10.0"
